--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "test_app",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.6.1",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1"
+  }
 }
